--- a/1410/01_mastermind/mastermind_submissions.yml
+++ b/1410/01_mastermind/mastermind_submissions.yml
@@ -124,13 +124,41 @@ submissions:
       Breaking Logic into Components: 0
   Brandon Mrsny:
     repository: https://github.com/bmrsny/mastermind
-    notes:
+    notes: |
+      Assessed by Josh Cheek
+
+      1. Fundamental Ruby & Style
+      Score: 3
+      folder names should be lowercase
+      class and method names are good
+
+      2. Enumerable & Collections
+      Score: 2
+      Adequate enumerables
+
+      3. Test-Driven Development
+      Score: 1
+      Guess tests failing
+      Printer tests failing
+      Game tests useless
+
+      4. REPL Interface
+      Score: 4
+      increments guess on invalid guesses
+      invalid input "xxxx" is indicated in a different way than other invalid messages
+      Nice interface (colour, ascii banners)
+      when winning, asks if we really want to quit
+
+      5. Breaking Logic into Components
+      Score: 1.5
+      High coupling between components and context
+      Toplevel puts
     evaluation:
-      Fundamental Ruby & Style: 0
-      Enumerable & Collections: 0
-      Test-Driven Development: 0
-      REPL Interface: 0
-      Breaking Logic into Components: 0
+      Fundamental Ruby & Style: 3
+      Enumerable & Collections: 2
+      Test-Driven Development: 1
+      REPL Interface: 4
+      Breaking Logic into Components: 1.5
   Scott Crawford:
     repository: https://github.com/scottcrawford03/mastermind
     notes: |
