--- a/1410/02_event_reporter/event_reporter_submissions.yml
+++ b/1410/02_event_reporter/event_reporter_submissions.yml
@@ -70,7 +70,7 @@ submissions:
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
   Bryce Holcomb & Laura Whalin:
-    repository: 
+    repository: https://github.com/bryceholcomb/event_reporter
     evaluation:
       notes: ""
       Functional Expectations: 0
