--- a/1410/02_event_reporter/event_reporter_submissions.yml
+++ b/1410/02_event_reporter/event_reporter_submissions.yml
@@ -50,7 +50,7 @@ submissions:
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
   Lori Culberson & Michael Dao:
-    repository: 
+    repository: https://github.com/mikedao/event_reporter
     evaluation:
       notes: ""
       Functional Expectations: 0
