--- a/1410/02_event_reporter/event_reporter_submissions.yml
+++ b/1410/02_event_reporter/event_reporter_submissions.yml
@@ -80,7 +80,7 @@ submissions:
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
   Rich Shea & Scott Crawford:
-    repository: 
+    repository: https://github.com/scottcrawford03/event_reporter
     evaluation:
       notes: ""
       Functional Expectations: 0
