--- a/1410/02_event_reporter/event_reporter_submissions.yml
+++ b/1410/02_event_reporter/event_reporter_submissions.yml
@@ -30,7 +30,7 @@ submissions:
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
   Brandon Mrsny & Nathan Owsiany:
-    repository: 
+    repository: https://github.com/bmrsny/event_reporter
     evaluation:
       notes: ""
       Functional Expectations: 0
