--- a/1410/02_event_reporter/event_reporter_submissions.yml
+++ b/1410/02_event_reporter/event_reporter_submissions.yml
@@ -40,7 +40,7 @@ submissions:
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
   Dustin Gault & Emily Berkeley:
-    repository: 
+    repository: https://github.com/DSynergy/Event_Reporter
     evaluation:
       notes: ""
       Functional Expectations: 0
