--- a/1410/02_event_reporter/event_reporter_submissions.yml
+++ b/1410/02_event_reporter/event_reporter_submissions.yml
@@ -90,7 +90,7 @@ submissions:
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
   Lydia Shafer & Krista A Nelson:
-    repository: 
+    repository: https://github.com/KristaANelson/event_reporter
     evaluation:
       notes: ""
       Functional Expectations: 0
