--- a/1410/02_event_reporter/event_reporter_submissions.yml
+++ b/1410/02_event_reporter/event_reporter_submissions.yml
@@ -60,7 +60,7 @@ submissions:
       Fundamental Ruby & Style: 0
       Enumerable & Collections: 0
   Bhargavi Satpathy & Jeffrey Wan & Edward McCarthy:
-    repository: 
+    repository: https://github.com/bhargavisatpathy/event_manager
     evaluation:
       notes: ""
       Functional Expectations: 0
