--- a/1410/02_event_reporter/event_reporter_submissions.yml
+++ b/1410/02_event_reporter/event_reporter_submissions.yml
@@ -82,13 +82,15 @@ submissions:
   Rich Shea & Scott Crawford:
     repository: https://github.com/scottcrawford03/event_reporter
     evaluation:
-      notes: ""
-      Functional Expectations: 0
-      REPL Interface: 0
-      Test-Driven Development: 0
-      Breaking Logic into Components: 0
-      Fundamental Ruby & Style: 0
-      Enumerable & Collections: 0
+      notes: "All base expectations fulfilled; partially implemented two extensions.
+              REPL is easy to use; tables are nicely formatted.
+              Well-factored code; processor could use some refactoring."
+      Functional Expectations: 3
+      REPL Interface: 3.5
+      Test-Driven Development: 3.5
+      Breaking Logic into Components: 3
+      Fundamental Ruby & Style: 3
+      Enumerable & Collections: 3
   Lydia Shafer & Krista A Nelson:
     repository: https://github.com/KristaANelson/event_reporter
     evaluation:
