--- a/1410/02_event_reporter/event_reporter_submissions.yml
+++ b/1410/02_event_reporter/event_reporter_submissions.yml
@@ -2,13 +2,17 @@ submissions:
   Alexandra Robinson & Juan Manuel Navarro:
     repository: https://github.com/scottalexandra/event_reporter
     evaluation:
-      notes: ""
-      Functional Expectations: 0
-      REPL Interface: 0
-      Test-Driven Development: 0
-      Breaking Logic into Components: 0
-      Fundamental Ruby & Style: 0
-      Enumerable & Collections: 0
+      notes: "Some base functionality; missing print by functionality. One crash when user entered invalid help command.
+              REPL is easy to read, but missing some functionality.
+              Good intent with TDD but tests were not updated as application grew and changed.
+              Can see effort toward organization and refactoring.
+              Good understanding of basic enums (collect, select, sort)."
+      Functional Expectations: 2
+      REPL Interface: 2.5
+      Test-Driven Development: 2
+      Breaking Logic into Components: 2.5
+      Fundamental Ruby & Style: 3
+      Enumerable & Collections: 3
   Andrew Overby & Chris Luhring:
     repository: https://github.com/cluhring/event_reporter
     evaluation:
