--- a/1410/03_sales_engine/sales_engine_eval.yml
+++ b/1410/03_sales_engine/sales_engine_eval.yml
@@ -70,7 +70,7 @@ submissions:
       Enumerable & Collections:
       Code Sanitation:
   Rich Shea & Michael Dao:
-    repository: 
+    repository: https://github.com/mikedao/sales_engine
     evaluation:
       notes: ""
       Functional Expectations: 
