--- a/1410/03_sales_engine/sales_engine_eval.yml
+++ b/1410/03_sales_engine/sales_engine_eval.yml
@@ -50,7 +50,7 @@ submissions:
       Enumerable & Collections:
       Code Sanitation:
   Jeffrey Wan & Krista A Nelson:
-    repository: 
+    repository: https://github.com/KristaANelson/sales_engine.git
     evaluation:
       notes: ""
       Functional Expectations: 
