--- a/1410/03_sales_engine/sales_engine_eval.yml
+++ b/1410/03_sales_engine/sales_engine_eval.yml
@@ -1,6 +1,6 @@
 submissions:
   Bhargavi Satpathy & Lori Culberson:
-    repository: 
+    repository: https://github.com/bhargavisatpathy/sales_engine
     evaluation:
       notes: ""
       Functional Expectations: 
