--- a/1410/03_sales_engine/sales_engine_eval.yml
+++ b/1410/03_sales_engine/sales_engine_eval.yml
@@ -40,7 +40,7 @@ submissions:
       Enumerable & Collections:
       Code Sanitation:
   Nathan Owsiany & Scott Crawford:
-    repository: 
+    repository: https://github.com/ndwhtlssthr/sales_engine
     evaluation:
       notes: ""
       Functional Expectations: 
