--- a/1410/03_sales_engine/sales_engine_eval.yml
+++ b/1410/03_sales_engine/sales_engine_eval.yml
@@ -89,7 +89,7 @@ submissions:
       Fundamental Ruby & Style:
       Enumerable & Collections:
       Code Sanitation:
-  Edward McCarthy & Dustin Gault:
+  Edward McCarthy & Dustin Gault: https://github.com/DSynergy/sales_engine/tree/dustin2.0
     repository: 
     evaluation:
       notes: ""
