Add link to Emily and Manny's repo

--- a/1410/03_sales_engine/sales_engine_eval.yml
+++ b/1410/03_sales_engine/sales_engine_eval.yml
@@ -60,7 +60,7 @@ submissions:
       Enumerable & Collections:
       Code Sanitation:
   Juan Manuel Navarro & Emily Berkeley:
-    repository: 
+    repository: https://github.com/gomav/sales_engine
     evaluation:
       notes: ""
       Functional Expectations: 
