--- a/1410/03_sales_engine/sales_engine_eval.yml
+++ b/1410/03_sales_engine/sales_engine_eval.yml
@@ -30,7 +30,7 @@ submissions:
       Enumerable & Collections:
       Code Sanitation:
   Brandon Mrsny & Chris Luhring:
-    repository: 
+    repository: https://github.com/bmrsny/sales_engine
     evaluation:
       notes: ""
       Functional Expectations: 
