--- a/1410/03_sales_engine/sales_engine_eval.yml
+++ b/1410/03_sales_engine/sales_engine_eval.yml
@@ -44,13 +44,18 @@ submissions:
   Nathan Owsiany & Scott Crawford:
     repository: https://github.com/ndwhtlssthr/sales_engine
     evaluation:
-      notes: ""
-      Functional Expectations: 
-      Test-Driven Development:
-      Encapsulation / Breaking Logic into Components:
-      Fundamental Ruby & Style:
-      Enumerable & Collections:
-      Code Sanitation:
+      notes: "Very well-factored code.
+              Implemented all base expectations and two extensions. 
+              One hundred percent test coverage.
+              Good use of enumerables.
+              Used modules to encapsulate reused code.
+              Used inheritance to encapsulate reused code."
+      Functional Expectations: 4
+      Test-Driven Development: 4
+      Encapsulation / Breaking Logic into Components: 3.5
+      Fundamental Ruby & Style: 4
+      Enumerable & Collections: 4
+      Code Sanitation: 4
   Jeffrey Wan & Krista A Nelson:
     repository: https://github.com/KristaANelson/sales_engine.git
     evaluation:
