Add link to Emily's repo

--- a/1410/04_ideabox/ideabox_submissions.yml
+++ b/1410/04_ideabox/ideabox_submissions.yml
@@ -12,7 +12,7 @@ submissions:
   Nathan Owsiany:
     repository:
   Emily Berkeley:
-    repository:
+    repository: https://github.com/EmilyMB/ideabox2
   Edward McCarthy:
     repository:
   Michael Dao:
