--- a/1410/04_ideabox/ideabox_submissions.yml
+++ b/1410/04_ideabox/ideabox_submissions.yml
@@ -14,7 +14,7 @@ submissions:
   Michael Dao:
     repository:
   Orion Osborn:
-    repository:
+    repository: https://github.com/oorion/idea_box.git
   Bhargavi Satpathy:
     repository:
   Krista A Nelson:
