add Mike's ideabox

--- a/1410/04_ideabox/ideabox_submissions.yml
+++ b/1410/04_ideabox/ideabox_submissions.yml
@@ -12,7 +12,7 @@ submissions:
   Emily Berkeley:
     repository: https://github.com/EmilyMB/ideabox2
   Michael Dao:
-    repository:
+    repository: https://github.com/mikedao/ideabox
   Orion Osborn:
     repository: https://github.com/oorion/idea_box.git
   Bhargavi Satpathy:
