--- a/1410/04_ideabox/ideabox_submissions.yml
+++ b/1410/04_ideabox/ideabox_submissions.yml
@@ -1,6 +1,6 @@
 submissions:
   Rich Shea:
-    repository:
+    repository:  https://github.com/rshea303/idea_box
   Laura Whalin:
     repository:
   Jeffrey Wan:
