--- a/1410/04_ideabox/ideabox_submissions.yml
+++ b/1410/04_ideabox/ideabox_submissions.yml
@@ -29,7 +29,7 @@ submissions:
     repository:
   Dustin Gault:
     repository:
-  Lydia Shafer:
+  Lydia Shafer:https://github.com/Lydias303/IdeaBox
     repository:
   Alexandra Robinson:
     repository:
