--- a/1410/04_ideabox/ideabox_submissions.yml
+++ b/1410/04_ideabox/ideabox_submissions.yml
@@ -22,7 +22,7 @@ submissions:
   Brandon Mrsny:
     repository:
   Scott Crawford:
-    repository:
+    repository: https://github.com/scottcrawford03/ideabox
   Kit Pearson:
     repository:
   Chris Luhring:
