--- a/1412/01_mastermind/mastermind_submissions.yml
+++ b/1412/01_mastermind/mastermind_submissions.yml
@@ -9,7 +9,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Austin Wood:
-    repository: https://github.com/yourusername/yourproject
+    repository: https://github.com/indiesquidge/mastermind.git
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
