--- a/1412/01_mastermind/mastermind_submissions.yml
+++ b/1412/01_mastermind/mastermind_submissions.yml
@@ -27,7 +27,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   David E Maurer:
-    repository: https://github.com/yourusername/yourproject
+    repository: git@github.com:abstractrandom/mastermind.git
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
