--- a/1412/01_mastermind/mastermind_submissions.yml
+++ b/1412/01_mastermind/mastermind_submissions.yml
@@ -162,7 +162,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Trey Tomlinson:
-    repository: https://github.com/yourusername/yourproject
+    repository: https://github.com/treyyyy/mastermind
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
