--- a/1412/01_mastermind/mastermind_submissions.yml
+++ b/1412/01_mastermind/mastermind_submissions.yml
@@ -72,7 +72,7 @@ submissions:
       REPL Interface: 0
       Breaking Logic into Components: 0
   Juan Manuel Navarro:
-    repository: https://github.com/yourusername/yourproject
+    repository: https://github.com/gomav/MasterMind.git
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
