--- a/1412/01_mastermind/mastermind_submissions.yml
+++ b/1412/01_mastermind/mastermind_submissions.yml
@@ -136,13 +136,16 @@ submissions:
       Breaking Logic into Components: 0
   Stanley Siudzinski:
     repository: https://github.com/SSgoldwater/mastermind
-    notes: '(filled in by instructor)'
+    notes: 'Pretty strong testing.
+            Ruby style is good, love seeing small classes.
+            Components are well broken down and individually tested.
+            Feedback implementation isn\'t quite right.'
     evaluation:
-      Fundamental Ruby & Style: 0
-      Enumerable & Collections: 0
-      Test-Driven Development: 0
-      REPL Interface: 0
-      Breaking Logic into Components: 0
+      Fundamental Ruby & Style: 3
+      Enumerable & Collections: 3
+      Test-Driven Development: 3
+      REPL Interface: 2
+      Breaking Logic into Components: 4
   Teresa Finn:
     repository: https://github.com/teresafinn/mastermind
     notes: '(filled in by instructor)'
